--- a/main.html
+++ b/main.html
@@ -10,7 +10,179 @@
 </head>
 
 <body>
-
+    <div class="wrapper">
+        <header class="header">
+            <div class="container header__container">
+                <a href="./index.html" class="logo">Афродита</a>
+                <address class="contacts">
+                    <a href="" class="contacts__phone">8 (800) 00-392-10</a>
+                    <div class="contacts__schedule">
+                        <a class="contacts__desk">График работы</a>
+                        <div class="contacts__dropdown">
+                            <div class="contacts__days">пн-вс: 09:00-20:00</div>
+                            <div class="contacts__dinner">обед: 14:00-14:30</div>
+                        </div>
+                    </div>
+                </address>
+            </div>
+        </header>
+        <div class="page-content">
+            <div class="container">
+                <div class="page-block">
+                    <aside class="sidebar">
+                        <nav class="nav">
+                            <ul class="nav__list">
+                                <li class="nav__item nav__item_active">
+                                    <a href="main.html" class="nav__link nav__link_main">Главная</a>
+                                </li>
+                                <li class="nav__item">
+                                    <a href="reviews.html" class="nav__link nav__link_reviews">Отзывы</a>
+                                </li>
+                                <li class="nav__item">
+                                    <a href="services.html" class="nav__link nav__link_service">Услуги</a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <div class="advertising">
+                            <div class="advertising__title">Особенность</div>
+                            <div class="advertising__subtitle">Уникальность</div>
+                            <div class="advertising__desk">Мы делаем все, для вашего комфорта.
+                                <ul class="advertising__list">
+                                    <li class="advertising__item">Питание включено</li>
+                                    <li class="advertising__item">Багаж (5 кг)</li>
+                                    <li class="advertising__item">Душ/баня</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="news">
+                            <div class="news__subtitle">Топ новостей <span class="news__element">за сентябрь</span>
+                            </div>
+                            <ul class="news__list">
+                                <li class="news__item">
+                                    <img src="./img/man.png" alt="man" class="news__item_pic">
+                                </li>
+                                <li class="news__item">
+                                    <img src="./img/food.png" alt="food" class="news__item_pic">
+                                </li>
+                                <li class="news__item">
+                                    <img src="./img/equipment.png" alt="equipment" class="news__item_pic">
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="socials">
+                            <div class="socials__desk">Наши социальные сети</div>
+                            <ul class="socials__list">
+                                <li class="socials__item">
+                                    <a href="#" class="socials__link socials__link_vk"></a>
+                                </li>
+                                <li class="socials__item">
+                                    <a href="#" class="socials__link socials__link_fb"></a>
+                                </li>
+                                <li class="socials__item">
+                                    <a href="#" class="socials__link socials__link_gl"></a>
+                                </li>
+                                <li class="socials__item">
+                                    <a href="#" class="socials__link socials__link_tw"></a>
+                                </li>
+                                <li class="socials__item">
+                                    <a href="#" class="socials__link socials__link_gm"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </aside>
+                    <main class="main-page">
+                        <div class="main-img">
+                            <img src="./img/main_img.png" alt="banner">
+                        </div>
+                        <section class="tidings">
+                            <h2 class="title">Последние новости</h2>
+                            <ul class="tidings__list">
+                                <li class="tidings__item">
+                                    <div class="tidings__pic">
+                                        <img src="./img/effect.png " alt="pictures" class="tidings__img">
+                                    </div>
+                                    <div class="tidings__desk">
+                                        <div class="tidings__date">12.10.2016</div>
+                                        <div class="tidings__title">Похудение с помощью бодибилдинга!</div>
+                                        <div class="tidings__text">Вдыхание одного литра кислорода эквивалентно
+                                            «сжиганию» 5 калорий, однако в минуту при самом высоком темпе движений атлет
+                                            способен вдохнуть не более 3-4 литров кислорода. Это крайне важно для
+                                            каждого начинающего атлета.</div>
+                                    </div>
+                                </li>
+                                <li class="tidings__item">
+                                    <div class="tidings__pic">
+                                        <img src="./img/fire.png" alt="pictures" class="tidings__img">
+                                    </div>
+                                    <div class="tidings__desk">
+                                        <div class="tidings__date">01.02.2016</div>
+                                        <div class="tidings__title">Заражай друзей, получай призы!</div>
+                                        <div class="tidings__text">Дополнительно для Вас: пользование сауной и
+                                            предоставление средств личной гигиены, пользование баром, таблица замеров,
+                                            дружеская атмосфера и постоянная поддержка. Мы запотимся о вашем комфорте и
+                                            предлагаем испытать это уже сегодня!</div>
+                                    </div>
+                                </li>
+                                <li class="tidings__item">
+                                    <div class="tidings__pic">
+                                        <img src="./img/work.png" alt="pictures" class="tidings__img">
+                                    </div>
+                                    <div class="tidings__desk">
+                                        <div class="tidings__date">22.12.2015</div>
+                                        <div class="tidings__title">Фрилансер? Выпрями спину!</div>
+                                        <div class="tidings__text">Создайте рабочее место под себя. Вот этот инструмент
+                                            поможет определить, что подходит именно вам и вашему организму. Используйте
+                                            специальную подставку для ноутбука, если вы проводите за ним больше 2 часов.
+                                            Настройте высоту и яркость монитора! </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </section>
+                        <div class="pagination">
+                            <div class="pagination__text">Страница 1 из 7</div>
+                            <div class="pagination__block">
+                                <ul class="pagination__list">
+                                    <a href="#" class="pagination__btn-before">&lt;</a>
+                                    <li class="pagination__item pagination__item_active">
+                                        <a href="#" class="pagination__link">1</a>
+                                    </li>
+                                    <li class="pagination__item">
+                                        <a href="#" class="pagination__link">2</a>
+                                    </li>
+                                    <li class="pagination__item">
+                                        <a href="#" class="pagination__link">3</a>
+                                    </li>
+                                    <li class="pagination__item">
+                                        <a href="#" class="pagination__link">4</a>
+                                    </li>
+                                    <li class="pagination__item">
+                                        <a href="#" class="pagination__link">5</a>
+                                    </li>
+                                    <li class="pagination__item">
+                                        <a href="#" class="pagination__link">6</a>
+                                    </li>
+                                    <li class="pagination__item">
+                                        <a href="#" class="pagination__link">7</a>
+                                    </li>
+                                    <a href="#" class="pagination__btn-after">&gt;</a>
+                                </ul>
+                            </div>
+                        </div>
+                    </main>
+                </div>
+            </div>
+            <footer class="footer">
+                <div class="container footer__container">
+                    <div class="footer__desk">
+                        <div class="footer__text">Сделано с любовью и старанием на курсе «HTML + CSS» в <span
+                                class="school">LoftSchool.</span></div>
+                        <div class="footer__author">Автор работы: <span class="author">Прохладов Вадим</span></div>
+                    </div>
+                    <a href="./index.html" class="logo">Афродита</a>
+                </div>
+            </footer>
+        </div>
+    </div>
 </body>
 
 </html>
